Fixing spacing

--- a/FrontEnd/sitio-web-buses/src/pages/Info.css
+++ b/FrontEnd/sitio-web-buses/src/pages/Info.css
@@ -3,27 +3,17 @@
     background-size: cover;
     background-position: center;
    
-    
-    
-   
-    z-index: -1;
- 
-     
-     
+    z-index: -1;  
  }
 
-
-
 .presentacion{
-
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width:100%;
+    height:auto;
     background-color: rgb(211, 209, 206);
-
 }
-
 
 .tarjeta{
     border: 1px solid rgb(0, 174, 255);
@@ -34,8 +24,6 @@
     margin-bottom: 200px;
     min-width: 200px;
     background-color: white;
-   
-
 }
 .ima{
     margin: 10px 10px 10px 10px;
@@ -53,6 +41,4 @@
         flex-direction: column;
         flex-wrap: wrap;
    }
-    
-
 }
